Background covering screen

--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -271,6 +271,11 @@
 }
 
 @media (orientation: landscape) {
+	.dinogotchi_screen__background {
+		height: 115vh;
+		bottom: 0;
+	}
+
 	.dinogotchi_screen__dino_pet {
 		left: 10vmin;
 	}
