--- a/src/views/kids_space/game_menu/tic_tac_dino/styles.css
+++ b/src/views/kids_space/game_menu/tic_tac_dino/styles.css
@@ -29,17 +29,17 @@
 }
 
 .tic_tac_dino_game .Queridino {
-	background-image: url('../../../../assets/kids_space/diplodocus.svg');
+	background-image: url('../../../../assets/new/dino_expressions/felizp.svg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 80%;
 }
 
 .tic_tac_dino_game .Amigossauro {
-	background-image: url('../../../../assets/kids_space/triceratops.svg');
+	background-image: url('../../../../assets/new/friends/triceratops.svg');
 	background-position: center;
 	background-repeat: no-repeat;
-	background-size: 80%;
+	background-size: contain;
 }
 
 .tic_tac_dino_game__display {
