--- a/src/views/kids_space/game_menu/dino_slider/piece/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/piece/styles.css
@@ -3,12 +3,12 @@
   font-weight: bold;
   height: 20vmin;
   width: 20vmin;
-  background-color: #C2B3A3;
+  background-color: #ff860d;
   margin: 3px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(88, 83, 69);
+  color: #FFFFFF;
   border-radius: 40%;
   box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 4px 4px rgb(255 255 255 / 25%);
   align-self: center;
@@ -19,72 +19,62 @@
   font-size: 45px;
 }
 
+.dino_slider .dino_slider__piece.piece_0{
+  background-color: #C2B3A3;
+  color: #C2B3A3;
+}
+
 .dino_slider .dino_slider__piece.piece_2 {
   font-size: 45px;
-  background-color: #f28187;
-  color: whitesmoke;
+  background-color: #e9b90c;
 }
 
 .dino_slider .dino_slider__piece.piece_4 {
   font-size: 45px;
-  background-color: #f6c358 ;
-  color: whitesmoke;
-
+  background-color: #c6e030;
 }
 
 .dino_slider .dino_slider__piece.piece_8 {
   font-size: 45px;
-  background-color: #8184ee;
-  color: whitesmoke;
-
+  background-color: #93FF60;
 }
 
 .dino_slider .dino_slider__piece.piece_16 {
   font-size: 45px;
-  background-color: #ec9772;
-  color: whitesmoke;
-
+  background-color: #50d693;
 }
 
 .dino_slider .dino_slider__piece.piece_32 {
   font-size: 45px;
-  background-color: #bbcd85;
-  color: rgb(88, 83, 69);
+  background-color: #31d4cc;
 }
 
 .dino_slider .dino_slider__piece.piece_64 {
   font-size: 45px;
-  background-color: #7ac66b;
-  color: whitesmoke;
-
+  background-color: #60B0FF;
 }
 
 .dino_slider .dino_slider__piece.piece_128 {
-  background-color: #f4b469;
   font-size: 40px;
+  background-color: #6060FF;
 }
 
 .dino_slider .dino_slider__piece.piece_256 {
-  background-color: #b468e5;
-  color: whitesmoke;
-
   font-size: 40px;
+  background-color: #B060FF;
 }
 
 .dino_slider .dino_slider__piece.piece_512 {
-  background-color: #a2c75d;
-  color: whitesmoke;
   font-size: 40px;
+  background-color: #FF60FF;
 }
 
 .dino_slider .dino_slider__piece.piece_1024 {
-  background-color: #77aecc;
-  color: whitesmoke;
-
+  background-color: #FF409F;
 }
 
 .dino_slider .dino_slider__piece.piece_2048 {
-  background-color: #86e5a8;
+  background-color: #FF4040;
 }
 
 @media(vi) {
