Memory game: all dinos and variations added

--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -35,7 +35,7 @@
 	/* Memory Game */
 	--memory-game-primary-background-color: #ffda91;
 	--memory-game-secondary-background-color: #ffd175;
-	--memory-game-contrast-color: #76aaca;
+	--memory-game-contrast-color: #906F5D;
 	--memory-game-piece-back-color: #805a46;
 
 	/* ========================== */
