Fix: glossary header collapsing

--- a/src/views/main/glossary/glossary_list_items/glossary_list_item/styles.css
+++ b/src/views/main/glossary/glossary_list_items/glossary_list_item/styles.css
@@ -9,3 +9,7 @@
 .glossary__card__text {
   font-size: var(--default-font);
 }
+
+.glossary__card_title.dino__flex_row.dino__text__wrap.card-title {
+  justify-content: space-between;
+}
