Feat: svg's changed + background more responsive

--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -16,7 +16,7 @@
 	/* =         Games          = */
 	/* ========================== */
 	/* Dinno Runner */
-	--dino-runner-game-background-color: #ffe1ed;
+	--dino-runner-game-background-color: #1e344b;
 	--dino-runner-game-details-color: #e274a0;
 	--dino-runner-game-board-background: #1e344b;
 
