--- a/src/views/main/notes/note_info_dialog/styles.css
+++ b/src/views/main/notes/note_info_dialog/styles.css
@@ -2,31 +2,18 @@
 	display: flex;
 	flex-direction: row;
 	outline: none;
+	white-space: nowrap;
+	width: 100%;
 }
 
-.note_info_dialog__title,
-.note_info_dialog__last_update {
-	width: 100%;
-	background-color: var(--header-and-menu);
-	font-weight: 700;
-	color: var(--column-font-color);
-	font-size: var(--small-font);
+.note_info_dialog__title
+	:is(.MuiCardHeader-root, .MuiCardHeader-content, span) {
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
 
 .note_info_dialog__title.MuiDialogTitle-root {
 	padding-bottom: 0.5rem;
-}
-
-.note_info_dialog__last_update {
-	padding: 0rem 1.5rem 1rem 1.5rem;
-}
-.note_info_dialog__last_update h3 {
-	font-size: small;
-}
-
-.note_info_dialog__last_update h4 {
-	font-size: smaller;
-	margin-bottom: 0;
 }
 
 .note__info_dialog__content {
@@ -37,25 +24,4 @@
 .note__info_dialog__content__answer.MuiFormControl-root {
 	width: 100%;
 	margin-bottom: 0.5rem;
-}
-
-.note__info_dialog__title__question .MuiInputBase-root {
-	font-size: var(--default-font);
-	font-weight: 700;
-	color: var(--column-font-color);
-	height: 100%;
-}
-
-.note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root {
-	padding-top: 0.438rem;
-	margin-left: auto;
-}
-
-.note_info_dialog__title .svg_button.MuiButtonBase-root.MuiButton-root svg {
-	fill: var(--light-color);
-}
-
-.note_info_dialog__delete_icon svg {
-	width: 1.2rem;
-	height: 1.2rem;
 }
