Feat(dataProps on DinoTextfield for length and required control)

--- a/src/General.css
+++ b/src/General.css
@@ -11,7 +11,7 @@
 }
 
 .dino__textfield .MuiFormHelperText-root {
-	text-align: right;
+	text-align: right !important;
 	display: block;
 	color: var(--contrast-color);
 }
