--- a/src/General.css
+++ b/src/General.css
@@ -11,7 +11,7 @@
 }
 
 .dino__textfield .MuiFormHelperText-root {
-	text-align: right !important;
+	text-align: right;
 	display: block;
 	color: var(--contrast-color);
 	margin-bottom: -8px;
