--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -19,44 +19,6 @@
 	text-align: center;
 }
 
-.settings__save_button_container {
-	position: fixed;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	width: 80vw;
-	height: 8vh;
-	left: 10vw;
-	bottom: 1.5rem;
-}
-
-.settings__save_button {
-	width: 100%;
-	margin-top: auto;
-}
-
-.settings__save_button__icon {
-	width: 1.125rem;
-	height: 1.125rem;
-	margin-right: 0.6rem;
-	fill: var(--contrast-color);
-}
-
-.settings__save_button.MuiButtonBase-root {
-	margin-top: 3.125rem;
-	background-color: var(--header-and-menu);
-}
-
-.settings__save_button.MuiButtonBase-root .MuiButton-label {
-	color: var(--light-color);
-}
-
-.button.settings__save_button {
-	width: 50%;
-	height: 90%;
-	font-size: var(--big-font);
-}
-
 .settings__title.MuiTypography-root {
 	font-weight: 700;
 	font-size: var(--big-font);
@@ -99,7 +61,7 @@
 	margin-left: 1rem;
 }
 
-.settings__change_password_dialog input{
+.settings__change_password_dialog input {
 	margin-bottom: 0.7rem;
 	width: 100%;
 	padding: 0.2rem;
@@ -114,29 +76,10 @@
 }
 
 .settings__change_password_dialog__error_message {
-	color: #FF7676;
+	color: #ff7676;
 }
 
 @media (orientation: landscape) {
-	.settings {
-		width: 60vw;
-		margin: 0 20vw;
-	}
-
-	.settings__title.MuiTypography-root {
-		font-size: 3rem;
-	}
-
-	.settings .settings__form {
-		margin: 25px;
-	}
-
-	.button.text_button.settings__form__change_password,
-	.button.text_button.settings__form__delete_account {
-		font-size: 1.4rem;
-		padding: 1rem;
-	}
-
 	.settings__save_button_container {
 		bottom: 4.5rem;
 	}
