--- a/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
+++ b/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
@@ -26,9 +26,31 @@
 	height: auto;
 	z-index: 5;
 	visibility: hidden;
-	transition: visibility 0.1s;
 }
 
-.dinogotchi_screen__hearts.petting {
+.dinogotchi_screen__hearts #dinogotchi_screen__heart_1 {
+	transition: visibility 0.2s;
+}
+
+.dinogotchi_screen__hearts #dinogotchi_screen__heart_2 {
+	transition: visibility 0.2s 0.2s;
+}
+
+.dinogotchi_screen__hearts #dinogotchi_screen__heart_3 {
+	transition: visibility 0.2s 0.3s;
+}
+
+.dinogotchi_screen__hearts.petting #dinogotchi_screen__heart_1 {
 	visibility: visible;
+	transition: visibility 0.2s;
+}
+
+.dinogotchi_screen__hearts.petting #dinogotchi_screen__heart_2 {
+	visibility: visible;
+	transition: visibility 0.2s 0.1s;
+}
+
+.dinogotchi_screen__hearts.petting #dinogotchi_screen__heart_3 {
+	visibility: visible;
+	transition: visibility 0.2s 0.2s;
 }
