--- a/src/views/main/settings/styles.css
+++ b/src/views/main/settings/styles.css
@@ -31,53 +31,24 @@
 	text-transform: uppercase;
 }
 
-.dino_hr.settings__last_line {
-	margin-bottom: 17vh;
+.settings__delete_account_dialog p {
+	margin: 0;
 }
 
-.settings__delete_account_dialog h1 {
-	font-size: var(--large-font);
+.settings__delete_account_dialog h3 {
+	padding: 16px;
+	margin: 0;
 }
 
-.settings__delete_account_dialog__buttons,
-.settings__change_password_dialog__buttons {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	justify-content: flex-end;
-	margin-bottom: 1rem;
-	margin-right: 1rem;
-}
-
-.settings__change_password_dialog__buttons .button {
+.settings__delete_account_dialog__buttons {
+	font-size: var(--default-font);
 	margin-left: 1rem;
 }
 
-.settings__delete_account_dialog__buttons button {
-	width: 5rem;
-}
-
-.settings__delete_account_dialog__buttons__delete_button {
-	margin-left: 1rem;
-	background-color: #ed2939;
-}
-
-.settings__change_password_dialog input {
-	margin-bottom: 0.7rem;
-	width: 100%;
-	padding: 0.2rem;
-	border-radius: 1rem;
-	background-color: var(--dialog-input);
-	color: var(--base-font-color);
-	border: none;
-}
-
-.settings__change_password_dialog .dino_dialog__header__title h1 {
-	font-size: var(--very-large-font);
-}
-
-.settings__change_password_dialog__error_message {
-	color: #ff7676;
+.settings__delete_account_dialog__buttons.delete_button {
+	color: #ed2939;
+	width: 8vh;
+	padding: 0;
 }
 
 @media (orientation: landscape) {
