--- a/src/views/kids_space/dinogotchi/styles.css
+++ b/src/views/kids_space/dinogotchi/styles.css
@@ -6,7 +6,7 @@
 }
 
 .dinogotchi_screen .dino_icon_button__button svg {
-	fill: #A594AB;
+	fill: #0C1E59;
 }
 
 .dinogotchi_screen__background .painting {
