--- a/src/views/main/calendar/styles.css
+++ b/src/views/main/calendar/styles.css
@@ -1,15 +1,18 @@
 .calendar_dialog__header {
-    background-color: #F0994D;
-    color: #FAFAFA;
-    padding: 1rem;
+	background-color: #f0994d;
+	color: #fafafa;
+	padding: 1rem;
+}
+.calendar_dialog__header .color_palette {
+	margin-left: auto;
 }
 
 .calendar_dialog__header_title {
-    text-align: initial;
-    margin-right: 8px;
-    font-size: var(--default-font);
+	text-align: initial;
+	margin-right: 8px;
+	font-size: var(--default-font);
 }
 
 .calendar_dialog__content {
-    padding: 1.3rem;
+	padding: 1.3rem;
 }
