--- a/src/Var.css
+++ b/src/Var.css
@@ -109,7 +109,47 @@
 	--tag-color: #d1a300;
 }
 
-[data-theme='high_contrast'] {
+[data-theme='cotton_candy_light'] {
+	/* Fundos */
+	--login-background: #694e73;
+	--background-main: #f5f5f5;
+	--horizontal-menu-item: #e3c660;
+
+	/* Fontes */
+	--base-font-color: #121212;
+	--selection: #f1d881;
+
+	/* Menu e cabecalho */
+	--header-and-menu: #694e73;
+
+	/* Home */
+	--home-icons: #f1d881;
+
+	/* Notas */
+	--board-background: #f1d881;
+	--column-border: #d1a300;
+	--column-font-color: #f5f5f5;
+
+	--note-background: #fff3cb;
+	--note-answer-background: #efe1b1;
+
+	/* Botoes */
+	--button-font-color: #442950;
+	--button-selected-font-color: #b054d1;
+	--circular-button: #688478;
+	
+	/* Realce */
+	--highlight-color: #688478;
+	--tab-highlight-color: #688478;
+
+	/* Outros */
+	--contrast-color: #2f2e2c;
+	--inv-contrast-color: #f5f5f5;
+	--other-details: #f5f5f5;
+	--tag-color: #a594ab;
+}
+
+[data-theme='eggplant_dark'] {
 	/* Fundos */
 	--login-background: #694e73;
 	--background-main: #f5f5f5;
