fix( route to empty_dino.svg & arrowback color in dino slider)

--- a/src/views/kids_space/game_menu/dino_slider/styles.css
+++ b/src/views/kids_space/game_menu/dino_slider/styles.css
@@ -16,6 +16,12 @@
 
 }
 
+.dino_slider__header .dino_icon_button__button svg {
+	width: 3rem;
+	height: 3rem;
+	fill: var(--dino-slider-game-button-background-color);
+}
+
 .dino_slider__switch {
     max-width: 20vw;
     margin-left: auto;
