--- a/src/views/kids_space/variables.css
+++ b/src/views/kids_space/variables.css
@@ -27,6 +27,9 @@
 	/* Snake */
 	--snake-game-score-background-color: #f5f5f5;
 
+	/* Dino Slider */
+	--dino-slider-game-button-background-color: #B054D1;
+
 	/* Tic Tac Dino */
 	--tic-tac-dino-background-color: #cec1e7;
 	--tic-tac-dino-square-background-color: #d8cdec;
