--- a/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
+++ b/src/views/kids_space/dinogotchi/dinogotchi_interior/awake_dino/styles.css
@@ -7,21 +7,14 @@
 .dinogotchi_screen__options .circular {
 	height: 4.5rem;
 	width: 4.5rem;
-	background-color: #0C1E59;
+	background-color: #0c1e59;
 	margin-bottom: 1.5rem;
-}
-
-.dinogotchi_screen__options .dino_icon_button.circular .dino_icon_button__button svg {
-	width: inherit;
-	height: inherit;
-	padding: 0;
-	transform: scale(1.2);
 }
 
 .dinogotchi_screen__hearts {
 	position: absolute;
 	top: 12vh;
-    left: 55vw;
+	left: 55vw;
 	width: 100px;
 	height: auto;
 	z-index: 5;
