--- a/src/components/button/styles.css
+++ b/src/components/button/styles.css
@@ -9,7 +9,7 @@
 	font: 0.875rem;
 	font-weight: 500;
 	text-transform: uppercase;
-	background-color: var(--header-and-menu);
+	background-color: var(--buttons-background);
 	color: var(--light-color);
 	text-decoration: none;
 }
@@ -28,7 +28,7 @@
 
 .button.button__outline {
 	border: solid 0.063rem;
-	border-color: var(--contrast-color);
+	border-color: var(--buttons-background);
 }
 
 .button.disabled {
