--- a/src/components/tag_search_bar/styles.css
+++ b/src/components/tag_search_bar/styles.css
@@ -7,7 +7,7 @@
 }
 
 .tag_search_bar .MuiOutlinedInput-notchedOutline {
-	border-color: var(--contrast-color);
+	border-color: var(--search-bar-border-color);
 	border-width: 0.05rem;
 	border-radius: 0.625rem;
 }
@@ -19,6 +19,6 @@
 }
 
 .tag_search_bar .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline {
-	border-color: var(--contrast-color);
+	border-color: var(--search-bar-border-color);
 	border-width: 0.05rem;
 }
