--- a/src/views/terms_of_use/styles.css
+++ b/src/views/terms_of_use/styles.css
@@ -3,7 +3,7 @@
 	font-size: var(--default-font);
 	text-align: justify;
 
-	background-color: var(--background-main);
+	background-color: var(--background-color);
 	color: var(--base-font-color);
 
 	width: 100%;
@@ -27,7 +27,7 @@
 }
 
 .terms_of_use .dino_icon_button__button.arrow_back svg {
-	fill: var(--contrast-color);
+	fill: var(--base-font-color);
 }
 
 .terms_of_use h2 {
@@ -62,15 +62,15 @@
 
 .terms_of_use a {
 	text-decoration: none;
-	color: var(--tag-color);
+	color: var(--link-font-color);
 }
 
 .terms_of_use a:hover {
 	text-decoration: none;
-	color: var(--board-background);
+	color: var(--hover-link-font-color);
 }
 
 .terms_of_use a:active {
 	text-decoration: none;
-	color: var(--tag-color);
+	color: var(--link-font-color);
 }
