--- a/src/components/button/icon_button/style.css
+++ b/src/components/button/icon_button/style.css
@@ -11,7 +11,7 @@
 }
 
 .dino_icon_button .dino_icon_button__button svg {
-	fill: var(--contrast-color);
+	fill: var(--buttons-background);
 	margin: 0;
 }
 
@@ -32,7 +32,7 @@
 	border-radius: 50%;
 	height: 3.0rem;
 	width: 3.0rem;
-	background-color: var(--circular-button);
+	background-color: var(--buttons-background);
 	fill: var(--light-color);
 	box-shadow: 0rem 0.188rem 0.313rem -0.063rem rgba(0, 0, 0, 0.2),
 		0rem 0.375rem 0.625rem 0rem rgba(0, 0, 0, 0.14),
