--- a/src/components/drawer_navigation/content/app_bar/styles.css
+++ b/src/components/drawer_navigation/content/app_bar/styles.css
@@ -1,7 +1,7 @@
 .drawer__navigation__app_bar {
 	width: 100%;
 	height: 2.813rem;
-	background-color: var(--header-and-menu);
+	background-color: var(--menu-and-headers-background);
 	display: flex;
 	flex-direction: row;
 	align-items: center;
