--- a/src/components/drawer_navigation/drawer/styles.css
+++ b/src/components/drawer_navigation/drawer/styles.css
@@ -4,7 +4,7 @@
 	display: flex;
 	flex-direction: row;
 	overflow: auto;
-	background-color: var(--header-and-menu);
+	background-color: var(--menu-and-headers-background);
 	margin-left: -15rem;
 }
 
@@ -117,7 +117,7 @@
 	bottom: 0.5rem;
 	right: 2.8rem;
 	border-radius: 50%;
-	background-color: var(--header-and-menu);
+	background-color: var(--menu-and-headers-background);
 	width: 2rem;
 	height: 2rem;
 }
