--- a/src/components/search_bar/styles.css
+++ b/src/components/search_bar/styles.css
@@ -4,13 +4,13 @@
 }
 
 .mui-search-bar .MuiOutlinedInput-adornedStart {
-	border: solid 0.05rem var(--contrast-color);
+	border: solid 0.05rem var(--search-bar-border-color);
 	padding-left: 0rem;
 	border-radius: 0.625rem;
 }
 
 .mui-search-bar .MuiOutlinedInput-root:hover .MuiOutlinedInput-notchedOutline,
 .MuiOutlinedInput-root:focus {
-	border-color: var(--contrast-color);
+	border-color: var(--search-bar-border-color);
 	border-width: 0.05rem;
 }
