--- a/src/components/settings/first_settings_dialog/styles.css
+++ b/src/components/settings/first_settings_dialog/styles.css
@@ -61,7 +61,7 @@
 	width: 100%;
 	padding: 0.2rem;
 	border-radius: 1rem;
-	background-color: var(--dialog-input);
+	background-color: var(--dialog-background);
 	color: var(--base-font-color);
 	border: none;
 }
@@ -72,7 +72,7 @@
 
 .first_settings__message_dialog__sync_item .sync_info {
 	border-radius: 50%;
-	background-color: var(--header-and-menu);
+	background-color: var(--menu-and-headers-background);
 	min-width: 3rem;
 	min-height: 3rem;
 	max-width: 3rem;
