--- a/src/views/about/styles.css
+++ b/src/views/about/styles.css
@@ -1,7 +1,7 @@
 .about_us {
 	font-family: var(--font-base);
 	font-size: var(--default-font);
-	background-color: var(--background-main);
+	background-color: var(--background-color);
 	color: var(--base-font-color);
 	width: 100%;
 	height: 100%;
