--- a/src/views/main/notes/content/add_column/styles.css
+++ b/src/views/main/notes/content/add_column/styles.css
@@ -8,7 +8,7 @@
 .note__note_content__columns__add_column__button {
 	border: 0.063rem solid;
 	border-color: var(--column-border);
-	background-color: var(--board-background);
+	background-color: var(--note-column-background);
 	border-radius: 0.313rem;
 	width: 100%;
 	height: auto;
