--- a/src/views/main/notes/content/column/styles.css
+++ b/src/views/main/notes/content/column/styles.css
@@ -6,7 +6,7 @@
 
 .note__note_content__column__draggable {
 	border: 0.063rem solid var(--column-border);
-	background-color: var(--board-background);
+	background-color: var(--note-column-background);
 	border-radius: 8px;
 	padding: 10px 15px 10px 15px;
 	width: 270px;
