--- a/src/components/dialogs/google_grant_dialog/styles.css
+++ b/src/components/dialogs/google_grant_dialog/styles.css
@@ -12,6 +12,6 @@
 }
 
 .google_grant_dialog__buttons__accept_button.MuiButtonBase-root {
-	background-color: var(--buttons-background);
+	background-color: transparent;
 	margin-left: 0.5rem;
 }
