--- a/src/components/dino_stepper/styles.css
+++ b/src/components/dino_stepper/styles.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: row;
 	padding: 0 0 0.5rem 0;
-	background: var(--other-details);
+	background: var(--dialog-background);
 	color: var(--base-font-color);
 	width: 100%;
 }
