--- a/src/components/tag_list/styles.css
+++ b/src/components/tag_list/styles.css
@@ -1,16 +1,13 @@
 .tag_list.MuiPaper-root {
 	display: flex;
 	flex-direction: row;
-	background-color: inherit;
 	list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
 .tag_list.MuiPaper-root .MuiChip-root {
-	border: 0.063rem solid;
-	border-color: var(--dark-color);
-	background-color: inherit;
+	background-color: var(--tag-background);
 	margin-right: 0.313rem;
 	font-size: smaller;
 	height: 1.625rem;
@@ -24,6 +21,7 @@
 .tag_list.MuiPaper-root.MuiPaper-elevation1.MuiPaper-rounded {
 	overflow: auto;
 	box-shadow: none;
+	background-color: transparent;
 }
 
 .MuiChip-root.MuiAutocomplete-tag {
