--- a/src/views/main/faq_hub/styles.css
+++ b/src/views/main/faq_hub/styles.css
@@ -47,6 +47,11 @@
 
 .faq__fail_to_load .faq__save_button {
 	margin-top: 2rem;
+	background-color: var(--buttons-background);
+}
+
+.faq__fail_to_load .faq__save_button .MuiButton-label {
+	color: var(--buttons-font-color);
 }
 
 .faq__card_title {
